Generalized game.js to handle any puzzle, Updated puzzle for new function.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p id="cipher">Fdhvdu flskhuv duh ixq!</p>
     </div>
     <input type="text" id="answer" placeholder="Type your answer...">
-    <button onclick="checkAnswer()">Submit</button>
+    <button onclick="checkAnswer('Caesar ciphers are fun!')">Submit</button>
     <p id="feedback"></p>
   </div>
 
