Added Histories for Caesar and vignere puzzles.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="game-container">
     <h1>🔐 CryptoQuest</h1>
     <h2>Level 1: Caesar Cipher</h2>
-    <p id="clue">Decrypt this message (hint: it’s shifted by 3):</p>
+    <p id="clue">A caesar cipher works by shifting the alphabet by a given number, then substituing the numbers in the message. Try decrypting this message (hint: it’s shifted by 3):</p>
     <div class="cipher-box">
       <p id="cipher">Fdhvdu flskhuv duh ixq!</p>
     </div>
