--- a/vignere.html
+++ b/vignere.html
@@ -10,7 +10,7 @@
   <div class="game-container">
     <h1>🔐 CryptoQuest</h1>
     <h2>Level 2: Vignere Cipher</h2>
-    <!--<p id="clue">Decrypt this message (hint: it’s shifted by 3):</p>-->
+    <p id="clue">A vignere cipher is a polyalphabetic cipher, which works by assigning numbers to a keyphrase, then using a different cipher for each letter of the key phrase.</p>
     <div class="cipher-box">
       <p id="cipher">Mdwl wy e opkvgafx qotalv.</p>
     </div>
