Added Links Between Challenges

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <input type="text" id="answer" placeholder="Type your answer...">
     <button onclick="checkAnswer('Caesar ciphers are fun!')">Submit</button>
     <p id="feedback"></p>
+    <a id = "nextChallenge" style = "visibility: hidden" href="stenography.html"> Next Challenge!</a>
   </div>
-
   <script src="game.js"></script>
 </body>
 </html>
