--- a/stenography.html
+++ b/stenography.html
@@ -17,6 +17,8 @@
     <input type="text" id="answer" placeholder="Type your answer...">
     <button onclick="checkAnswer('This message is visible with a highlight.')">Submit</button>
     <p id="feedback"></p>
+    <a id = "nextChallenge" style = "visibility: hidden" href="vignere.html"> Next Challenge!</a>
+
   </div>
 
   <script src="game.js"></script>
