--- a/template.html
+++ b/template.html
@@ -17,6 +17,8 @@
     <input type="text" id="answer" placeholder="Type your answer...">
     <button onclick="checkAnswer('Answer Here')">Submit</button>
     <p id="feedback"></p>
+    <a id = "nextChallenge" style = "visibility: hidden" href=""> Next Challenge!</a>
+
   </div>
 
   <script src="game.js"></script>
