added Enigma Puzzle

--- a/template.html
+++ b/template.html
@@ -17,7 +17,7 @@
     <input type="text" id="answer" placeholder="Type your answer...">
     <button onclick="checkAnswer('Answer Here')">Submit</button>
     <p id="feedback"></p>
-    <a id = "nextChallenge" style = "visibility: hidden" href=""> Next Challenge!</a>
+    <a id = "nextChallenge" style = "visibility: hidden" href="Link to Next Level Here"> Next Challenge!</a>
 
   </div>
 
