--- a/vignere.html
+++ b/vignere.html
@@ -17,7 +17,7 @@
     <input type="text" id="answer" placeholder="Type your answer...">
     <button onclick="checkAnswer('This is a vigenere cipher.')">Submit</button>
     <p id="feedback"></p>
-    <a id = "nextChallenge" style = "visibility: hidden" href=""> Next Challenge!</a>
+    <a id = "nextChallenge" style = "visibility: hidden" href="enigma.html"> Next Challenge!</a>
   </div>
 
   <script src="game.js"></script>
