--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Choose a level to play:</p>
 
     <div class="level-list">
-      <a class="level-link" href="index-level1.html">Level 1: Caesar Cipher</a>
+      <a class="level-link" href="caesar.html">Level 1: Caesar Cipher</a>
       <a class="level-link" href="stenography.html">Level 2: Stenography</a>
       <a class="level-link" href="vignere.html">Level 3: Vigenere Cipher</a>
       <a class="level-link" href="enigma.html">Level 4: Enigma Machine</a>
