--- a/index.html
+++ b/index.html
@@ -11,11 +11,34 @@
     <h1>🔐 CryptoQuest</h1>
     <p>Choose a level to play:</p>
 
-    <div class="level-list">
-      <a class="level-link" href="caesar.html">Level 1: Caesar Cipher</a>
-      <a class="level-link" href="stenography.html">Level 2: Stenography</a>
-      <a class="level-link" href="vignere.html">Level 3: Vigenere Cipher</a>
-      <a class="level-link" href="enigma.html">Level 4: Enigma Machine</a>
+    <div class="honeycomb">
+      <a class="hex-link" href="caesar.html">
+        <span class="hex-label">
+          Level 1
+          <small>Caesar Cipher</small>
+        </span>
+      </a>
+
+      <a class="hex-link" href="stenography.html">
+        <span class="hex-label">
+          Level 2
+          <small>Stenography</small>
+        </span>
+      </a>
+
+      <a class="hex-link" href="vignere.html">
+        <span class="hex-label">
+          Level 3
+          <small>Vigenere Cipher</small>
+        </span>
+      </a>
+
+      <a class="hex-link" href="enigma.html">
+        <span class="hex-label">
+          Level 4
+          <small>Enigma Machine</small>
+        </span>
+      </a>
     </div>
   </div>
 </body>
