--- a/caesar.html
+++ b/caesar.html
@@ -18,6 +18,11 @@
     <button onclick="checkAnswer('Caesar ciphers are fun!')">Submit</button>
     <p id="feedback"></p>
     <a id = "nextChallenge" style = "visibility: hidden" href="stenography.html"> Next Challenge!</a>
+    <p style="margin-top: 20px;">
+  <a href="index.html" style="color: #00ffc3; text-decoration: underline;">
+    ⬅ Back to Main Menu
+  </a>
+</p>
   </div>
   <script src="game.js"></script>
 </body>
