--- a/stenography.html
+++ b/stenography.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div class="game-container">
-    <h1>🔐 CryptoQuest</h1>
-    <h2>Level x: Stenography</h2>
+    <h1> CryptoQuest</h1>
+    <h2>Level 2: Stenography</h2>
     <p id="clue">Stenography is the practice of concealing the presence of a message, within another message.</p>
     <div class="cipher-box">
       <p id="cipher" style="color: #1c1c1c;">This message is visible with a highlight.</p>
