--- a/stenography.html
+++ b/stenography.html
@@ -12,10 +12,10 @@
     <h2>Level 2: Stenography</h2>
     <p id="clue">Stenography is the practice of concealing the presence of a message, within another message.</p>
     <div class="cipher-box">
-      <p id="cipher" style="color: #1c1c1c;">This message is visible with a highlight.</p>
+      <p id="cipher" style="color: #1c1c1c;">This message is visible with a highlight. The Key is: Hidden</p>
     </div>
     <input type="text" id="answer" placeholder="Type your answer...">
-    <button onclick="checkAnswer('This message is visible with a highlight.')">Submit</button>
+    <button onclick="checkAnswer('Hidden')">Submit</button>
     <p id="feedback"></p>
     <a id = "nextChallenge" style = "visibility: hidden" href="vignere.html"> Next Challenge!</a>
 
