--- a/caesar.html
+++ b/caesar.html
@@ -23,6 +23,21 @@
     ⬅ Back to Main Menu
   </a>
 </p>
+  <h3 class="lab-title">Crypto Lab</h3>
+    <p class="lab-subtitle">
+      Use the commands below to experiment with this cipher. Type <code>help</code> to see options.
+    </p>
+    <div id="terminal" class="terminal"></div>
+
+    <form id="command-form" class="command-form">
+      <span class="prompt">&gt;</span>
+      <input
+        type="text"
+        id="command-input"
+        autocomplete="off"
+        placeholder='Type "help" and press Enter...'
+      >
+    </form>
   </div>
   <script src="game.js"></script>
 </body>
