--- a/enigma.html
+++ b/enigma.html
@@ -18,7 +18,11 @@
     <button onclick="checkAnswer('This message can\'t be decrypted with frequency analysis, and requires more sophisticated analysis')">Submit</button>
     <p id="feedback"></p>
     <a id = "nextChallenge" style = "visibility: hidden" href=""> Next Challenge!</a>
-
+<p style="margin-top: 20px;">
+  <a href="index.html" style="color: #00ffc3; text-decoration: underline;">
+    ⬅ Back to Main Menu
+  </a>
+</p>
   </div>
 
   <script src="game.js"></script>
