--- a/enigma.html
+++ b/enigma.html
@@ -9,7 +9,7 @@
 <body>
   <div class="game-container">
     <h1>🔐 CryptoQuest</h1>
-    <h2>Level x: Enigma Machine</h2>
+    <h2>Level 4: Enigma Machine</h2>
     <p id="clue">The Enigma Machine was a Cryptography Device in use from the end of World War One, until the End Of World War Two. This particular message was enciphered with an Enigma M3 model Enigma</p>
     <div class="cipher-box">
       <p id="cipher">boot klar x bei j schnoor j etwa zwo siben x nov x sechs nul cbm x proviant bis zwo nul x dez x benoetige glaeser y noch vier klar x stehe marqu bruno bruno zwo funf x lage wie j schaefer j x nnn www funf y eins funf mb steigend y gute sicht vvv j rasch</p>
