--- a/vignere.html
+++ b/vignere.html
@@ -18,6 +18,11 @@
     <button onclick="checkAnswer('This is a vigenere cipher.')">Submit</button>
     <p id="feedback"></p>
     <a id = "nextChallenge" style = "visibility: hidden" href="enigma.html"> Next Challenge!</a>
+  <p style="margin-top: 20px;">
+  <a href="index.html" style="color: #00ffc3; text-decoration: underline;">
+    ⬅ Back to Main Menu
+  </a>
+</p>
   </div>
 
   <script src="game.js"></script>
