--- a/caesar.html
+++ b/caesar.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="game-container">
+    <a href="index.html" class="back-link">⬅ Back to Main Menu</a>
     <h1>🔐 CryptoQuest</h1>
     <h2>Level 1: Caesar Cipher</h2>
     <p id="clue">
