--- a/stenography.html
+++ b/stenography.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="game-container">
+    <a href="index.html" class="back-link">⬅ Back to Main Menu</a>
     <h1> CryptoQuest</h1>
     <h2>Level 2: Stenography</h2>
     <p id="clue">Stenography is the practice of concealing the presence of a message, within another message.</p>
@@ -18,9 +19,6 @@
     <button onclick="checkAnswer('Hidden')">Submit</button>
     <p id="feedback"></p>
     <a id = "nextChallenge" style = "visibility: hidden" href="vignere.html"> Next Challenge!</a>
-<p style="margin-top: 20px;">
-  <a href="index.html" style="color: #00ffc3; text-decoration: underline;">
-    ⬅ Back to Main Menu
   </a>
 </p>
   </div>
