--- a/vignere.html
+++ b/vignere.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="game-container">
+     <a href="index.html" class="back-link">⬅ Back to Main Menu</a>
     <h1>🔐 CryptoQuest</h1>
     <h2>Level 3: Vignere Cipher</h2>
     <p id="clue">A vignere cipher is a polyalphabetic cipher, which works by assigning numbers to a keyphrase, then using a different cipher for each letter of the key phrase.</p>
@@ -18,9 +19,6 @@
     <button onclick="checkAnswer('This is a vigenere cipher.')">Submit</button>
     <p id="feedback"></p>
     <a id = "nextChallenge" style = "visibility: hidden" href="enigma.html"> Next Challenge!</a>
-  <p style="margin-top: 20px;">
-  <a href="index.html" style="color: #00ffc3; text-decoration: underline;">
-    ⬅ Back to Main Menu
   </a>
 </p>
   </div>
