--- a/enigma.html
+++ b/enigma.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="game-container">
+     <a href="index.html" class="back-link">⬅ Back to Main Menu</a>
     <h1>🔐 CryptoQuest</h1>
     <h2>Level 4: Enigma Machine</h2>
     <p id="clue">The Enigma Machine was a Cryptography Device in use from the end of World War One, until the End Of World War Two. This particular message was enciphered with an Enigma M3 model Enigma</p>
@@ -18,9 +19,6 @@
     <button onclick="checkAnswer('This message can\'t be decrypted with frequency analysis, and requires more sophisticated analysis')">Submit</button>
     <p id="feedback"></p>
     <a id = "nextChallenge" style = "visibility: hidden" href=""> Next Challenge!</a>
-<p style="margin-top: 20px;">
-  <a href="index.html" style="color: #00ffc3; text-decoration: underline;">
-    ⬅ Back to Main Menu
   </a>
 </p>
   </div>
