--- a/vignere.html
+++ b/vignere.html
@@ -3,24 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CryptoQuest - Level 1</title>
+  <title>CryptoQuest - Level 3</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="game-container">
-     <a href="index.html" class="back-link">⬅ Back to Main Menu</a>
+    <a href="index.html" class="back-link">⬅ Back to Main Menu</a>
+
     <h1>🔐 CryptoQuest</h1>
-    <h2>Level 3: Vignere Cipher</h2>
-    <p id="clue">A vignere cipher is a polyalphabetic cipher, which works by assigning numbers to a keyphrase, then using a different cipher for each letter of the key phrase.</p>
+    <h2>Level 3: Vigenere Cipher</h2>
+
+    <p id="clue">
+      A vignere cipher is a polyalphabetic cipher, which works by assigning numbers to a keyphrase,
+      then using a different cipher for each letter of the key phrase.
+    </p>
+
     <div class="cipher-box">
       <p id="cipher">Mdwl wy e opkvgafx qotalv.</p>
     </div>
+
     <input type="text" id="answer" placeholder="Type your answer...">
     <button onclick="checkAnswer('This is a vigenere cipher.')">Submit</button>
     <p id="feedback"></p>
-    <a id = "nextChallenge" style = "visibility: hidden" href="enigma.html"> Next Challenge!</a>
-  </a>
-</p>
+
+    <a id="nextChallenge" style="visibility: hidden" href="enigma.html">Next Challenge!</a>
   </div>
 
   <script src="game.js"></script>
