--- a/caesar.html
+++ b/caesar.html
@@ -20,7 +20,7 @@
     </div>
 
     <input type="text" id="answer" placeholder="Type your answer...">
-    <button onclick="checkAnswer('Caesar ciphers are fun!')">Submit</button>
+    <button onclick="checkAnswer('Caesar ciphers are fun!', 1)">Submit</button>
     <p id="feedback"></p>
 
     <a id="nextChallenge" style="visibility: hidden" href="stenography.html">Next Challenge!</a>
