--- a/stenography.html
+++ b/stenography.html
@@ -16,7 +16,7 @@
       <p id="cipher" style="color: #1c1c1c;">This message is visible with a highlight. The Key is: Hidden</p>
     </div>
     <input type="text" id="answer" placeholder="Type your answer...">
-    <button onclick="checkAnswer('Hidden')">Submit</button>
+    <button onclick="checkAnswer('Hidden',2)">Submit</button>
     <p id="feedback"></p>
     <a id = "nextChallenge" style = "visibility: hidden" href="vignere.html"> Next Challenge!</a>
   </a>
