--- a/vignere.html
+++ b/vignere.html
@@ -23,7 +23,7 @@
     </div>
 
     <input type="text" id="answer" placeholder="Type your answer...">
-    <button onclick="checkAnswer('This is a vigenere cipher.')">Submit</button>
+    <button onclick="checkAnswer('This is a vigenere cipher.',3)">Submit</button>
     <p id="feedback"></p>
 
     <a id="nextChallenge" style="visibility: hidden" href="enigma.html">Next Challenge!</a>
