--- a/enigma.html
+++ b/enigma.html
@@ -16,7 +16,7 @@
       <p id="cipher">boot klar x bei j schnoor j etwa zwo siben x nov x sechs nul cbm x proviant bis zwo nul x dez x benoetige glaeser y noch vier klar x stehe marqu bruno bruno zwo funf x lage wie j schaefer j x nnn www funf y eins funf mb steigend y gute sicht vvv j rasch</p>
     </div>
     <input type="text" id="answer" placeholder="Type your answer...">
-    <button onclick="checkAnswer('This message can\'t be decrypted with frequency analysis, and requires more sophisticated analysis')">Submit</button>
+    <button onclick="checkAnswer('This message can\'t be decrypted with frequency analysis, and requires more sophisticated analysis',4)">Submit</button>
     <p id="feedback"></p>
     <a id = "nextChallenge" style = "visibility: hidden" href=""> Next Challenge!</a>
   </a>
