--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
     <p>Choose a level to play:</p>
 
     <div class="honeycomb">
-      <a class="hex-link" href="caesar.html">
+      <a class="hex-link" data-level="1" href="caesar.html">
         <span class="hex-label">
           Level 1
           <small>Caesar Cipher</small>
         </span>
       </a>
 
-      <a class="hex-link" href="stenography.html">
+      <a class="hex-link" data-level="2" href="stenography.html">
         <span class="hex-label">
           Level 2
           <small>Stenography</small>
         </span>
       </a>
 
-      <a class="hex-link" href="vignere.html">
+      <a class="hex-link" data-level="3" href="vignere.html">
         <span class="hex-label">
           Level 3
           <small>Vigenere Cipher</small>
         </span>
       </a>
 
-      <a class="hex-link" href="enigma.html">
+      <a class="hex-link" data-level="4" href="enigma.html">
         <span class="hex-label">
           Level 4
           <small>Enigma Machine</small>
@@ -41,5 +41,9 @@
       </a>
     </div>
   </div>
+
+  <!-- Script that locks/unlocks levels based on progress -->
+  <script src="menu.js"></script>
 </body>
 </html>
+
