--- a/index.html
+++ b/index.html
@@ -40,10 +40,14 @@
         </span>
       </a>
     </div>
+
+    <!-- New: reset progress button -->
+    <button id="reset-progress" class="reset-btn" type="button">
+      Reset Progress
+    </button>
   </div>
 
   <!-- Script that locks/unlocks levels based on progress -->
   <script src="menu.js"></script>
 </body>
 </html>
-
