--- a/vignere.html
+++ b/vignere.html
@@ -19,11 +19,11 @@
     </p>
 
     <div class="cipher-box">
-      <p id="cipher">Mdwl wy e opkvgafx qotalv.</p>
+      <p id="cipher">Xzetgstv Anivgi Qjvqgjqunznp Btvfagrtw.</p>
     </div>
 
     <input type="text" id="answer" placeholder="Type your answer...">
-    <button onclick="checkAnswer('This is a vigenere cipher.', 3)">Submit</button>
+    <button onclick="checkAnswer('Vigenere Cypher Successfully Decrypted', 3)">Submit</button>
     <p id="feedback"></p>
 
     <a id="nextChallenge" style="visibility: hidden" href="enigma.html">Next Challenge!</a>
