--- a/vignere.html
+++ b/vignere.html
@@ -14,8 +14,8 @@
     <h2>Level 3: Vigenere Cipher</h2>
 
     <p id="clue">
-      A Vigenere cipher is a polyalphabetic cipher, which works by assigning numbers to a keyphrase,
-      then using a different cipher for each letter of the key phrase.
+      A vigenere Cipher is a polyalphabetic cipheR, which works by assigning numbers to a keYphrase,
+      then using a different ciPher for each letTer Of the key phrase.
     </p>
 
     <div class="cipher-box">
