--- a/vignere.html
+++ b/vignere.html
@@ -31,7 +31,7 @@
     <!-- ===== Crypto Lab for this level ===== -->
     <hr>
     <p class="lab-hint">
-      Use the Crypto Lab to experiment with ciphers.  
+      Use the Crypto Lab below to decrypt ciphers!  
     </p>
 
     <!-- Toggle button -->
