--- a/caesar.html
+++ b/caesar.html
@@ -28,7 +28,10 @@
     <button id="toggle-lab" class="lab-toggle-btn" type="button">
       Open Crypto Lab
     </button>
-
+<hr>
+    <p class="lab-hint">
+      Use the Crypto Lab below to decrypt ciphers!  
+    </p>
     <!-- Lab wrapped in a container (starts hidden, JS toggles .active) -->
     <div id="lab-container" class="lab-container">
       <h3 class="lab-title">Crypto Lab</h3>
