--- a/caesar.html
+++ b/caesar.html
@@ -24,6 +24,9 @@
     <p id="feedback"></p>
 
     <a id="nextChallenge" style="visibility: hidden" href="stenography.html">Next Challenge!</a>
+    <p class="lab-hint">
+      Use the Crypto Lab below to decrypt ciphers!  
+    </p>
     <!-- Toggle button for the lab -->
     <button id="toggle-lab" class="lab-toggle-btn" type="button">
       Open Crypto Lab
