--- a/caesar.html
+++ b/caesar.html
@@ -9,7 +9,7 @@
 <body>
   <div class="game-container">
     <a href="index.html" class="back-link">⬅ Back to Main Menu</a>
-    <h1>🔐 CryptoQuest</h1>
+    <h1> CryptoQuest</h1>
     <h2>Level 1: Caesar Cipher</h2>
     <p id="clue">
       A caesar cipher works by shifting the alphabet by a given number, then substituing the numbers in the message.
