--- a/vignere.html
+++ b/vignere.html
@@ -10,7 +10,7 @@
   <div class="game-container">
     <a href="index.html" class="back-link">⬅ Back to Main Menu</a>
 
-    <h1>🔐 CryptoQuest</h1>
+    <h1>  CryptoQuest</h1>
     <h2>Level 3: Vigenere Cipher</h2>
 
     <p id="clue">
