--- a/enigma.html
+++ b/enigma.html
@@ -9,7 +9,7 @@
 <body>
   <div class="game-container">
      <a href="index.html" class="back-link">⬅ Back to Main Menu</a>
-    <h1>🔐 CryptoQuest</h1>
+    <h1>   CryptoQuest</h1>
     <h2>Level 4: Enigma Machine</h2>
     <p id="clue">The Enigma Machine was a Cryptography Device in use from the end of World War One, until the End Of World War Two. This particular message was enciphered with an Enigma M3 model Enigma</p>
     <div class="cipher-box">
