--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="game-container">
-    <h1>🔐 CryptoQuest</h1>
+    <h1> CryptoQuest</h1>
     <p>Choose a level to play:</p>
 
     <div class="honeycomb">
