--- a/columnar.html
+++ b/columnar.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CryptoQuest - Level 5</title>
+  <title>CryptoQuest - Level 3</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="game-container">
     <a href="index.html" class="back-link">⬅ Back to Main Menu</a>
 
-    <h1>  CryptoQuest</h1>
-    <h2>Level 5: Columnar Transposition</h2>
+    <h1>🔐 CryptoQuest</h1>
+    <h2>Level 3: Columnar Transposition</h2>
 
     <p id="clue">
       This is a <strong>columnar transposition cipher</strong>. The plaintext is written in rows,
@@ -27,7 +27,7 @@
     </div>
 
     <input type="text" id="answer" placeholder="Type your answer...">
-    <button onclick="checkAnswer('Transposition ciphers rearrange message letters.', 5)">Submit</button>
+    <button onclick="checkAnswer('Transposition ciphers rearrange message letters.', 3)">Submit</button>
     <p id="feedback"></p>
 
     <a id="nextChallenge" style="visibility: hidden" href="substitution.html">Next Challenge!</a>
