--- a/substitution.html
+++ b/substitution.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CryptoQuest - Level 6</title>
+  <title>CryptoQuest - Level 4</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="game-container">
     <a href="index.html" class="back-link">⬅ Back to Main Menu</a>
 
-    <h1>  CryptoQuest</h1>
-    <h2>Level 6: Substitution Cipher</h2>
+    <h1>🔐 CryptoQuest</h1>
+    <h2>Level 4: Substitution Cipher</h2>
 
     <p id="clue">
       This is a <strong>simple substitution cipher</strong>: every letter of the alphabet is
@@ -26,10 +26,10 @@
     </div>
 
     <input type="text" id="answer" placeholder="Type your answer...">
-    <button onclick="checkAnswer('Substitution ciphers can be solved with frequency analysis.', 6)">Submit</button>
+    <button onclick="checkAnswer('Substitution ciphers can be solved with frequency analysis.', 4)">Submit</button>
     <p id="feedback"></p>
 
-    <a id="nextChallenge" style="visibility: hidden" href="">Next Challenge!</a>
+    <a id="nextChallenge" style="visibility: hidden" href="vignere.html">Next Challenge!</a>
   </div>
 
   <script src="game.js"></script>
