--- a/vignere.html
+++ b/vignere.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CryptoQuest - Level 3</title>
+  <title>CryptoQuest - Level 5</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="game-container">
     <a href="index.html" class="back-link">⬅ Back to Main Menu</a>
 
-    <h1>  CryptoQuest</h1>
-    <h2>Level 3: Vigenere Cipher</h2>
+    <h1>🔐 CryptoQuest</h1>
+    <h2>Level 5: Vigenere Cipher</h2>
 
     <p id="clue">
-      A vigenere Cipher is a polyalphabetic cipheR, which works by assigning numbers to a keYphrase,
+      A Vigenere Cipher is a polyalphabetic cipheR, which works by assigning numbers to a keYphrase,
       then using a different ciPher for each letTer Of the key phrase.
     </p>
 
@@ -23,7 +23,7 @@
     </div>
 
     <input type="text" id="answer" placeholder="Type your answer...">
-    <button onclick="checkAnswer('Vigenere Cypher Successfully Decrypted', 3)">Submit</button>
+    <button onclick="checkAnswer('Vigenere Cypher Successfully Decrypted', 5)">Submit</button>
     <p id="feedback"></p>
 
     <a id="nextChallenge" style="visibility: hidden" href="enigma.html">Next Challenge!</a>
@@ -31,7 +31,7 @@
     <!-- ===== Crypto Lab for this level ===== -->
     <hr>
     <p class="lab-hint">
-      Use the Crypto Lab below to decrypt ciphers!  
+      Use the Crypto Lab below to decrypt ciphers!
     </p>
 
     <!-- Toggle button -->
