--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>Choose a level to play:</p>
 
     <div class="honeycomb">
+      <!-- Level 1 -->
       <a class="hex-link" data-level="1" href="caesar.html">
         <span class="hex-label">
           Level 1
@@ -19,6 +20,7 @@
         </span>
       </a>
 
+      <!-- Level 2 -->
       <a class="hex-link" data-level="2" href="stenography.html">
         <span class="hex-label">
           Level 2
@@ -26,22 +28,40 @@
         </span>
       </a>
 
-      <a class="hex-link" data-level="3" href="vignere.html">
+      <!-- Level 3 -->
+      <a class="hex-link" data-level="3" href="columnar.html">
         <span class="hex-label">
           Level 3
+          <small>Columnar Transposition</small>
+        </span>
+      </a>
+
+      <!-- Level 4 -->
+      <a class="hex-link" data-level="4" href="substitution.html">
+        <span class="hex-label">
+          Level 4
+          <small>Substitution Cipher</small>
+        </span>
+      </a>
+
+      <!-- Level 5 -->
+      <a class="hex-link" data-level="5" href="vignere.html">
+        <span class="hex-label">
+          Level 5
           <small>Vigenere Cipher</small>
         </span>
       </a>
 
-      <a class="hex-link" data-level="4" href="enigma.html">
+      <!-- Level 6 -->
+      <a class="hex-link" data-level="6" href="enigma.html">
         <span class="hex-label">
-          Level 4
+          Level 6
           <small>Enigma Machine</small>
         </span>
       </a>
     </div>
 
-    <!-- New: reset progress button -->
+    <!-- Reset progress button -->
     <button id="reset-progress" class="reset-btn" type="button">
       Reset Progress
     </button>
