--- a/stenography.html
+++ b/stenography.html
@@ -18,7 +18,7 @@
     <input type="text" id="answer" placeholder="Type your answer...">
     <button onclick="checkAnswer('Hidden',2)">Submit</button>
     <p id="feedback"></p>
-    <a id = "nextChallenge" style = "visibility: hidden" href="vignere.html"> Next Challenge!</a>
+    <a id = "nextChallenge" style = "visibility: hidden" href="columnar.html"> Next Challenge!</a>
   </a>
 </p>
   </div>
