--- a/stenography.html
+++ b/stenography.html
@@ -3,27 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CryptoQuest - Level 1</title>
+  <title>CryptoQuest - Level 2</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="game-container">
     <a href="index.html" class="back-link">⬅ Back to Main Menu</a>
+
     <h1> CryptoQuest</h1>
     <h2>Level 2: Stenography</h2>
-    <p id="clue">Stenography is the practice of concealing the presence of a message, within another message.</p>
+
+    <p id="clue">
+      Stenography is the practice of concealing the presence of a message within another message.
+    </p>
+
     <div class="cipher-box">
-      <p id="cipher" style="color: #1c1c1c;">This message is visible with a highlight. The Key is: Hidden</p>
+      <p id="cipher" style="color: #1c1c1c;">
+        This message is visible with a highlight. The Key is: Hidden
+      </p>
     </div>
+
     <input type="text" id="answer" placeholder="Type your answer...">
-    <button onclick="checkAnswer('Hidden',2)">Submit</button>
+    <button onclick="checkAnswer('Hidden', 2)">Submit</button>
     <p id="feedback"></p>
-    <a id = "nextChallenge" style = "visibility: hidden" href="columnar.html"> Next Challenge!</a>
-  </a>
-</p>
+
+    <a id="nextChallenge" style="visibility: hidden" href="columnar.html">Next Challenge!</a>
   </div>
 
   <script src="game.js"></script>
 </body>
 </html>
-<!-- trigger GitHub Pages build -->
