--- a/vignere.html
+++ b/vignere.html
@@ -14,7 +14,7 @@
     <h2>Level 5: Vigenere Cipher</h2>
 
     <p id="clue">
-      A Vigenere Cipher is a polyalphabetic cipheR, which works by assigning numbers to a keYphrase,
+      A vigenere Cipher is a polyalphabetic cipheR, which works by assigning numbers to a keYphrase,
       then using a different ciPher for each letTer Of the key phrase.
     </p>
 
