--- a/columnar.html
+++ b/columnar.html
@@ -21,11 +21,11 @@
     </p>
 
     <div class="cipher-box">
-      <p id="cipher">TONRR ELSSI HAEGE XNTPE GATXR SCSAS EXAII RNSTX POERM ERX</p>
+      <p id="cipher">CAELMPMDUIOEORRELCCTNHPX</p>
     </div>
 
     <input type="text" id="answer" placeholder="Type your answer...">
-    <button onclick="checkAnswer('Transposition ciphers rearrange message letters.', 3)">Submit</button>
+    <button onclick="checkAnswer('ColumnarCipherCompleted', 3)">Submit</button>
     <p id="feedback"></p>
 
     <a id="nextChallenge" style="visibility: hidden" href="substitution.html">Next Challenge!</a>
