--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
   <div class="game-container">
     <h1> CryptoQuest</h1>
     <p>Choose a level to play:</p>
-
+<div class="progress-section">
+  <div class="progress-header">
+    <span>Progress</span>
+    <span id="progress-text">0 / 5 levels completed</span>
+  </div>
+  <div class="progress-bar">
+    <div id="progress-fill"></div>
+  </div>
+</div>
     <div class="honeycomb">
       <!-- Level 1 -->
       <a class="hex-link" data-level="1" href="caesar.html">
