--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
     </button>
   </div>
 
+   <!-- Shared game logic (progress, crypto lab, etc.) -->
+  <script src="game.js"></script>
+
   <!-- Script that locks/unlocks levels based on progress -->
   <script src="menu.js"></script>
 </body>
 </html>
+
