--- a/stenography.html
+++ b/stenography.html
@@ -11,7 +11,7 @@
     <a href="index.html" class="back-link">⬅ Back to Main Menu</a>
 
     <h1> CryptoQuest</h1>
-    <h2>Level 2: Stenography</h2>
+    <h2>Level 2: Steganography</h2>
 
     <p id="clue">
       Stenography is the practice of concealing the presence of a message within another message.
