--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a class="hex-link" data-level="2" href="stenography.html">
         <span class="hex-label">
           Level 2
-          <small>Stenography</small>
+          <small>Steganography</small>
         </span>
       </a>
 
